Update SnodasDataReaderTest